# GMOSS

./: .gitignore  GMOSS.py  GMOSS_  GMOSS_8aug17  GMOSS_8aug17.c  GMOSS_8aug17.mak  GMOSS_HealpixSpectra_Ravi.ipynb  GMOSS_params_allpix.txt  GMOSS_python_integration_tests.ipynb  LICENSE  README.md  adpint.f  amoeba.c  amotry.c  beam_definition_cos2.c  beam_definition_cos2_pattern.c  besselk.f  cal_lst.c  convex_func.py  convex_func1.py  coods.txt  curve_fit.py  curve_fit_scipy_minimize.py  curve_fitting_minimize_using_scipy.py  fitting.py  frequencies_list.txt  gsm_macpro_msr.yml  mcmc2.ipynb  midpnt.c  midpnt_alternate.c  monopole_beam.txt  nrutil.c  patch_integrate_besselk_10oct16_1_500.c  patch_integrate_besselk_10oct16_1_500.mak  pixel_fits.csv  pixel_fits_degree_1.csv  pixel_fits_degree_4.csv  polint.c  polint_alternate.c  precess.f  (+11 more)
.ipynb_checkpoints/: mcmc2-checkpoint.ipynb
GMOSS_data_share/: readme.txt
pyGMOSS/: .env  GMOSS.py  all_sky_map_generator.py  check_concave_convex.py  chi_square_nm.py  concave_model.py  consts.py  convex_func1.py  convex_func2.py  convex_func_fresh.py  convex_func_working.py  convex_func_working_1.py  convex_model.py  convex_model1.py  convex_model_initial_param_generator.py  convex_model_initial_parameters.py  convexity.txt  csv_txt_plot.py  curve_fit.py  curve_fitting_basic.py  curve_fitting_minimize.py  fitting1.py  plot_all_sky_map.py  plot_brightness_temperature.py  pygmoss_consts.py  read_data_at_pixel.py  scipy_optimize_next_try.py  testinglog.py  tools.py  utils.py
src/: .env  check_concave_convex.py  concave_model.py  (+2 more)
(+2 files in other folders)
